--- a/footer.html
+++ b/footer.html
@@ -24,7 +24,7 @@
                 <div class="links">
                     <a class="footer_font_size" target="_blank" href="https://support.google.com/chrome/answer/95647?hl=ru&co=GENIE.Platform%3DDesktop">Cookie ֆայլերի օգտագործման պայմանները</a>                    
                     <a class="footer_font_size" target="_blank" href="rules.html">Կանոններ</a>                    
-                    <a class="footer_font_size" href="http://localhost:5500/support.html">Օգնություն</a>                    
+                    <a class="footer_font_size" href="support.html">Օգնություն</a>                    
                     <a class="footer_font_size" href="advertisment.html">Գովազդ կայքում</a>                    
                 </div>
                 <div class="copyright">
