--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="lunar">
             <div class="firstblock">
                 <div class="firstblock_text">
-                    <span>Աշխատեք առանց տնից դւրս գալու </span>
+                    <span>Աշխատեք առանց տնից դուրս գալու </span>
                     <p>Ներկայացված է աշխարհի առաջատար հրատարակություններում</p>
                     <a href="#">Աշխատանք</a>
                 </div>
