--- a/advertisment.html
+++ b/advertisment.html
@@ -37,7 +37,7 @@
         </div>
         <div class="tel_contact_info">
             <span class="ad_main_text">Գովազդի և համագործակցության համար խնդրում ենք դիմել</span>
-            <a class="here_ad" href="tell:37491557772">Հեռ.՝ +374 91-77-72</a>
+            <a class="here_ad" href="tell:37491557772">Հեռ.՝ +374 91-55-77-72</a>
             <a class="here_ad" href="mailto:freelanceam@workmail.com">Էլ.փոստ՝ freelanceam@workmail.com</a>
         </div>
         <span class="ad_main_text">Գովազդային նյութերի տեխնիկական պահանջներ `</span>
